# cmake_with_py_gen

./: CMakeLists.txt  main.c
pygen/: pyproject.toml  run.py
pygen/src/pygen/: gen.py
